<?xml version="1.0" encoding="utf-8"?>
<!-- Main scrolling view -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="#D9D9D9"
    android:scrollbars="none"
    tools:context=".view.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <!-- Catalog erea -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_catalog"
            android:padding="8dp"
            android:textSize="18dp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/catalog_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </HorizontalScrollView>


        <!-- Wish list erea -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F1F0F6"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/your_wish_list"
                    android:textSize="18dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/total_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/total" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wishlist_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/sub_total_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_total"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_shipping"
                android:gravity="center"
                android:textColor="#5F9C89"/>

            <Button
                android:id="@+id/checkout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/proceed_to_checkout"
                android:backgroundTint="#EC3331"
                android:layout_margin="24dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>