<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="product"
            type="com.jbm.intactchallenge.model.Product" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        
        <import type="android.graphics.Color"/>
        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/product_detail"
        android:background="#D9D9D9"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    app:imageFromUrl="@{product.imageUrl}"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_corner_white_shape"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24dp"
                        android:gravity="center"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text='@{"$" + String.valueOf(product.roundedPrice)}'/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free_shipping"
                        android:textColor="#5F9C89"
                        android:gravity="center"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{product.fullDescription}"/>

                <LinearLayout
                    android:id="@+id/detail_color_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginEnd="16dp"/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:visibility="@{product.getColorSize &lt; 1 ? View.GONE : View.VISIBLE}"
                        android:background="@drawable/round_corner_color_shape"
                        android:backgroundTint='@{Color.parseColor(product.colors[0].code ?? "#000000")}'/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:visibility="@{product.getColorSize &lt; 2 ? View.GONE : View.VISIBLE}"
                        android:background="@drawable/round_corner_color_shape"
                        android:backgroundTint='@{Color.parseColor(product.colors[1].code ?? "#000000")}'/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:visibility="@{product.getColorSize &lt; 3 ? View.GONE : View.VISIBLE}"
                        android:background="@drawable/round_corner_color_shape"
                        android:backgroundTint='@{Color.parseColor(product.colors[2].code ?? "#000000")}'/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:visibility="@{product.getColorSize &lt; 4 ? View.GONE : View.VISIBLE}"
                        android:background="@drawable/round_corner_color_shape"
                        android:backgroundTint='@{Color.parseColor(product.colors[3].code ?? "#000000")}'/>

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:visibility="@{product.getColorSize &lt; 5 ? View.GONE : View.VISIBLE}"
                        android:background="@drawable/round_corner_color_shape"
                        android:backgroundTint='@{Color.parseColor(product.colors[4].code ?? "#000000")}'/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/detail_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text='@{"H: " + product.size.height + "\n" + "W: " + product.size.width + "\n" + "D: " + product.size.depth}'/>

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/round_corner_white_shape"
                android:padding="4dp">

                <TextView
                    android:id="@+id/rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_product"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <RatingBar
                    android:id="@+id/detail_rating_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@id/rate_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:rating="@={product.rating}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/detail_add_wishlist_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@{product.wishListed == 0 ? @string/add_to_wishlist : @string/remove_to_wishlist}"
                android:backgroundTint='@{product.wishListed == 0 ? Color.parseColor("#EC3331") : Color.parseColor("#000000") }'
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:onClick="@{clickListener}"/>

        </LinearLayout>
    </ScrollView>

</layout>